--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -66,3 +66,12 @@ jobs:
         run: pipenv install --dev
       - name: mypy type check
         run: pipenv run mypy meilisearch
+        
+  docs:
+    name: documentation
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: ammaraskar/sphinx-action@master
+      with:
+        docs-folder: "docs/"     
