--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -11,5 +11,6 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ammaraskar/sphinx-action@master
       with:
+        pre-build-command: "pip install camel-converter"
         docs-folder: "docs/"
       
