--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -11,6 +11,6 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ammaraskar/sphinx-action@master
       with:
-        pre-build-command: "pip install camel-converter[pydantic]"
+        pre-build-command: "pip install camel-converter[pydantic] && pip install sphinx_rtd_theme"
         docs-folder: "docs/"
       
