--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -8,9 +8,21 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+        lfs: true
+    - name: Install Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install camel-converter[pydantic]
+        pip install sphinx_rtd_theme
     - uses: ammaraskar/sphinx-action@master
       with:
-        pre-build-command: "pip install camel-converter[pydantic] && pip install sphinx_rtd_theme"
+        pre-build-command: "sphinx-apidoc -f -o docs meilisearch/"
         docs-folder: "docs/"
       
