--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -16,13 +16,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install camel-converter[pydantic]
-        pip install sphinx_rtd_theme
     - uses: ammaraskar/sphinx-action@master
       with:
-        pre-build-command: "sphinx-apidoc -f -o docs meilisearch/"
+        pre-build-command: "pip install camel-converter[pydantic] && pip install sphinx_rtd_theme && sphinx-apidoc -f -o docs meilisearch/"
         docs-folder: "docs/"
       
