--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -20,4 +20,12 @@ jobs:
       with:
         pre-build-command: "pip install camel-converter[pydantic] && pip install sphinx_rtd_theme && sphinx-apidoc -f -o docs meilisearch/"
         docs-folder: "docs/"
+    - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/doc-test' }}
+        with:
+          publish_branch: doc-test
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: docs/_build/
+          force_orphan: true    
       
