--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,8 @@ jobs:
     - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
     - name: Install dependencies
-      run: pipenv install --dev         
+      run: pipenv install --dev   
+      run: pipenv install sphinx_rtd_theme      
     - uses: ammaraskar/sphinx-action@master
       with:
         pre-build-command: "sphinx-apidoc -f -o docs meilisearch/"
