--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
            pipenv install --dev  
-           pipenv install sphinx_rtd_theme    
+           pip install sphinx_rtd_theme    
     - uses: ammaraskar/sphinx-action@master
       with:
         pre-build-command: "sphinx-apidoc -f -o docs meilisearch/"
