--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,12 +19,10 @@ jobs:
     - name: Install pipenv
       uses: dschep/install-pipenv-action@v1
     - name: Install dependencies
-      run: |
-           pipenv install --dev  
-           pip install sphinx_rtd_theme    
+      run: pipenv install --dev    
     - uses: ammaraskar/sphinx-action@master
       with:
-        pre-build-command: "sphinx-apidoc -f -o docs meilisearch/"
+        pre-build-command: "pipenv install sphinx_rtd_theme && sphinx-apidoc -f -o docs meilisearch/"
         docs-folder: "docs/"
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
