--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         pip install sphinx_rtd_theme 
         sphinx-apidoc -f -o docs meilisearch/
-        sphinx-build ./docs/_build/html/
+        sphinx-build docs ./docs/_build/html/
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
