--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,6 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         pipenv install --dev
+        pipenv install sphinx
         pipenv install sphinx_rtd_theme 
     - name: Build docs
       run: |
