--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -25,9 +25,8 @@ jobs:
         pipenv install sphinx_rtd_theme 
     - name: Build docs
       run: |
-        pipenv shell
-        sphinx-apidoc -f -o docs meilisearch/
-        sphinx-build docs ./docs/_build/html/
+        pipenv run sphinx-apidoc -f -o docs meilisearch/
+        pipenv run sphinx-build docs ./docs/_build/html/
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
